# quantile

./: cabal.project
quantile-p2/: ChangeLog.md  LICENSE  mkplot.hs  quantile-p2.cabal
quantile-p2/src/Statistics/P2/: Histogram.hs  Interpolation.hs  Quantile.hs
quantile-p2/src/Statistics/P2/Quantile/: Reference.hs
